@@ -6,9 +6,13 @@
 
 
 - C API [joes]
-  Add apreq_parse_xml parser, which is a simple wrapper
-  around APR's expat-based apr_xml_parser.
+  Support XForms' "multipart/related" enctype.
 
+- C API [joes]
+  Add apreq_hook_apr_xml_parser(), which is a simple wrapper
+  hook around APR's expat-based apr_xml_parser.  Add a generic
+  parser apreq_parse_generic() to parse arbitrary enctypes using
+  the hook API.
 
 @section v2_04_dev Changes with libapreq2-2.04-dev (released August 30, 2004)
 
